# ft_printf

./: CMakeLists.txt  main.c
ft_ptintf/: .gitignore  Makefile  check_create_float_res.c  check_float_res.c  e_flag_intf.c  field.c  field_len.c  flag_g_intf.c  flags_intf.c  float.c  float.h  float_intf.c  float_rounding.c  ft_ceil.c  ft_floor.c  ft_itoa_base.c  ft_itoa_base_printf.c  ft_log10.c  ft_log2.c  ft_printf.c  ft_ptintf.h  ft_putptr.c  ft_reverse.c  ft_round.c  g_flag_intf.c  get_binary.c  get_dbl_values.c  get_ldbl_values.c  high_precision.c  high_precision.h  high_precision_intf.c  high_precision_intf_long.c  high_precision_long.c  is.c  main.c  make_field.c  make_field_diouxx.c  my_float.c  my_long_float.c  myfloat.h  (+5 more)
ft_ptintf/includes/: ft_ptintf.h  high_precision.h  myfloat.h
ft_ptintf/libft/: Makefile  ft_ceil.c  ft_floor.c  ft_putstr.c  ft_reverse.c  ft_round.c  libft.h
ft_ptintf/srcs/: field_len.c  fill_union.c  ft_itoa_base_printf.c  ft_printf.c  get_binary.c  main.c  make_field.c  parsing_funcs.c  parsing_generaly.c  prepare_lennum.c  set_buff.c  set_flags.c  to_buff.c  which_sign.c  zeroing.c
ft_ptintf/srcsFloat/: check_create_float_res.c  e_flag_intf.c  float_intf.c  float_rounding.c  frees_for_float.c  ft_log2.c  g_flag_intf.c  get_dbl_values.c  get_ldbl_values.c  high_precision.c  high_precision_intf.c  high_precision_intf_long.c  high_precision_long.c  my_float.c  my_long_float.c  print_reserve_dbl.c
