cmake_minimum_required(VERSION 3.15)
project(Printf_Hub C)

set(CMAKE_C_STANDARD 99)

include_directories(ft_ptintf)
include_directories(ft_ptintf/includes)
include_directories(ft_ptintf/libft)

add_executable(Printf_Hub
        ft_ptintf/libft/ft_atoi.c
        ft_ptintf/libft/ft_bzero.c
        ft_ptintf/libft/ft_fib.c
        ft_ptintf/libft/ft_isalnum.c
        ft_ptintf/libft/ft_isalpha.c
        ft_ptintf/libft/ft_isascii.c
        ft_ptintf/libft/ft_isdigit.c
        ft_ptintf/libft/ft_islower.c
        ft_ptintf/libft/ft_isprint.c
        ft_ptintf/libft/ft_isupper.c
        ft_ptintf/libft/ft_itoa.c
        ft_ptintf/libft/ft_lstadd.c
        ft_ptintf/libft/ft_lstdel.c
        ft_ptintf/libft/ft_lstdelone.c
        ft_ptintf/libft/ft_lstiter.c
        ft_ptintf/libft/ft_lstmap.c
        ft_ptintf/libft/ft_lstnew.c
        ft_ptintf/libft/ft_lstpush.c
        ft_ptintf/libft/ft_memalloc.c
        ft_ptintf/libft/ft_memccpy.c
        ft_ptintf/libft/ft_memchr.c
        ft_ptintf/libft/ft_memcmp.c
        ft_ptintf/libft/ft_memcpy.c
        ft_ptintf/libft/ft_memdel.c
        ft_ptintf/libft/ft_memmove.c
        ft_ptintf/libft/ft_memset.c
        ft_ptintf/libft/ft_pow.c
        ft_ptintf/libft/ft_putchar.c
        ft_ptintf/libft/ft_putchar_fd.c
        ft_ptintf/libft/ft_putendl.c
        ft_ptintf/libft/ft_putendl_fd.c
        ft_ptintf/libft/ft_putnbr.c
        ft_ptintf/libft/ft_putnbr_fd.c
        ft_ptintf/libft/ft_putstr.c
        ft_ptintf/libft/ft_putstr_fd.c
        ft_ptintf/libft/ft_sqrt.c
        ft_ptintf/libft/ft_strcat.c
        ft_ptintf/libft/ft_strchr.c
        ft_ptintf/libft/ft_strclr.c
        ft_ptintf/libft/ft_strcmp.c
        ft_ptintf/libft/ft_strcpy.c
        ft_ptintf/libft/ft_strdel.c
        ft_ptintf/libft/ft_strdup.c
        ft_ptintf/libft/ft_strequ.c
        ft_ptintf/libft/ft_striter.c
        ft_ptintf/libft/ft_striteri.c
        ft_ptintf/libft/ft_strjoin.c
        ft_ptintf/libft/ft_strlcat.c
        ft_ptintf/libft/ft_strlen.c
        ft_ptintf/libft/ft_strmap.c
        ft_ptintf/libft/ft_strmapi.c
        ft_ptintf/libft/ft_strncat.c
        ft_ptintf/libft/ft_strncmp.c
        ft_ptintf/libft/ft_strncpy.c
        ft_ptintf/libft/ft_strnequ.c
        ft_ptintf/libft/ft_strnew.c
        ft_ptintf/libft/ft_strnstr.c
        ft_ptintf/libft/ft_strrchr.c
        ft_ptintf/libft/ft_strsplit.c
        ft_ptintf/libft/ft_strstr.c
        ft_ptintf/libft/ft_strsub.c
        ft_ptintf/libft/ft_strtrim.c
        ft_ptintf/libft/ft_tolower.c
        ft_ptintf/libft/ft_toupper.c
        ft_ptintf/libft/get_next_line.c
        ft_ptintf/libft/get_next_line.h
        ft_ptintf/libft/libft.h
        ft_ptintf/srcsFloat/check_create_float_res.c
        ft_ptintf/srcsFloat/e_flag_intf.c
        ft_ptintf/srcs/field_len.c
        ft_ptintf/srcsFloat/float_intf.c
        ft_ptintf/srcsFloat/float_rounding.c
        ft_ptintf/srcsFloat/frees_for_float.c
        ft_ptintf/libft/ft_ceil.c
        ft_ptintf/libft/ft_floor.c
        ft_ptintf/srcs/ft_itoa_base_printf.c
        ft_ptintf/srcsFloat/ft_log10.c
        ft_ptintf/srcsFloat/ft_log2.c
        ft_ptintf/srcs/ft_printf.c
        ft_ptintf/includes/ft_ptintf.h
        ft_ptintf/libft/ft_reverse.c
        ft_ptintf/libft/ft_round.c
        ft_ptintf/srcsFloat/g_flag_intf.c
        ft_ptintf/srcs/get_binary.c
        ft_ptintf/srcsFloat/get_dbl_values.c
        ft_ptintf/srcsFloat/get_ldbl_values.c
        ft_ptintf/srcsFloat/high_precision.c
        ft_ptintf/includes/high_precision.h
        ft_ptintf/srcsFloat/high_precision_intf.c
        ft_ptintf/srcsFloat/high_precision_intf_long.c
        ft_ptintf/srcsFloat/high_precision_long.c
        ft_ptintf/srcs/is_parser.c
        ft_ptintf/srcs/main.c
        ft_ptintf/srcs/make_field.c
        ft_ptintf/srcsFloat/my_float.c
        ft_ptintf/srcsFloat/my_long_float.c
        ft_ptintf/includes/myfloat.h
        ft_ptintf/srcs/parsing_generaly.c
        ft_ptintf/srcsFloat/print_reserve_dbl.c
        ft_ptintf/srcs/set_buff.c
        ft_ptintf/srcs/to_buff.c ft_ptintf/srcs/is_typeflags.c ft_ptintf/srcs/which_sign.c ft_ptintf/srcs/fill_union.c ft_ptintf/srcs/zeroing.c ft_ptintf/srcs/set_flags.c ft_ptintf/srcs/parsing_funcs.c ft_ptintf/srcs/prepare_lennum.c ft_ptintf/srcs/str_tolower.c)
